--- a/TermsAndConditions/terms.html
+++ b/TermsAndConditions/terms.html
@@ -62,8 +62,9 @@
                   total
                   bill amount<br>2). The total bill amount should be more than 1000 Rs (Indian Currency)<br>3). To avail
                   cashback you have to purchase your product within 24 hrs&nbsp;<br>4). After 24 hrs the validity
-                  of&nbsp; cashback will automatically terminated<br>5). The user should have registered PayTm, PhonePay
-                  or Google Pay to avail cashback<br>6). To avail cashback forward us the delivery message of Amazon.in
+                  of&nbsp; cashback will automatically terminated<br>5). You will recieve cashback within 2 months
+                  of&nbsp; your purchase<br>6). The user should have registered PayTm, PhonePay
+                  or Google Pay to avail cashback<br>7). To avail cashback forward us the delivery message of Amazon.in
                   on <a href="mailto:huntonline365@gmail.com">huntonline365@gmail.com</a>
                 </p>
               </div>
