--- a/about section/index.html
+++ b/about section/index.html
@@ -102,18 +102,10 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2 class="u-text u-text-body-alt-color u-text-1">why us</h2>
       <p class="u-align-left u-custom-font u-font-Lobster u-text u-text-2" data-animation-name="bounceIn"
-        data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">Welcome to Hunt-Online, your
-        number one source for online shopping. We're dedicated to giving you the very best with a focus on Amazon Men’s
-        and Women's Clothing, Kids wear , Beauty Products, Laptops and Mobile Accessories, Pet products and especially
-        our Covid-19 Essentials Items. All of them at low rates and with great discounts.
-        <br><b>We assure you that every
-          product that has been showcase in our website is of 100% quality and have a good ratings among the people. We
-          also promise you upto 10% cashback on your shopping cart of Amazon.com which makes us different from all other
-          shopping websites .<br></b>
-        <br>Founded in the year 2020 by B-Tech students of Jaypee University, We serve customers all over the world, and
-        are thrilled that we're able to turn our passion into our own website.<br>
-        <br>We hope you like the products in our website as much as we enjoy offering them to you.If you have any
-        questions or comments, please don't hesitate to<b> <a href="../ContactFrom/contact.html" target="_blank">Contact
+        data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">Welcome to Hunt-Online, your number one source for online shopping. We're dedicated to giving you the very best with a focus on Amazon Men’s and Women's Clothing, Kid's wear, Beauty Products, Laptops, and Mobile Accessories, Pet Products, and especially our Covid-19 Essentials Items. All of them at low rates and with great discounts.
+        <br><b>We assure you that every product that has been showcased on our website is 100% quality and has good ratings among the people. We also promise you up to 10% cashback on your shopping cart of Amazon.com which makes us different from all other shopping websites.<br></b>
+        <br>Founded in the year 2020 by B-Tech students of Jaypee University. We serve customers all over the world and thrilled that we're able to turn our passion into our website.<br>
+        <br>We hope you like the products on our website as much as we enjoy offering them to you. If you have any questions or queries, please don't hesitate to <b> <a href="../ContactFrom/contact.html" target="_blank">Contact
             Us</a>.</b>
       </p>
       <hr>
