--- a/kids_boys.html
+++ b/kids_boys.html
@@ -34,6 +34,27 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <!-- end swiper js -->
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 
 </head>
 <!--/head-->
@@ -414,15 +435,15 @@
                                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
                                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07QXL3NKV&asins=B07QXL3NKV&linkId=68a1dfca11925d19410266c9d6cb250b&show_border=true&link_opens_in_new_window=true"></iframe>
                                 </div>
+                                    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
                                     <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B078Y36Q4K&asins=B078Y36Q4K&linkId=084dc3ce6b3fa78a0976a75f5c20d0c3&show_border=true&link_opens_in_new_window=true"></iframe>
-                                </div>
+                                    </div>
+                                
                                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
                                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07R2Y61G1&asins=B07R2Y61G1&linkId=8384f213d213fef1d0fb2d4170b7d0ef&show_border=true&link_opens_in_new_window=true"></iframe>
                                 </div>
-
-
-
                             </div>
+
 
                         </div>
                     </div>
