--- a/men.html
+++ b/men.html
@@ -34,7 +34,27 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <!-- end swiper js -->
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 </head>
 <!--/head-->
 
@@ -436,6 +456,23 @@
 
 
                         </div>
+                         <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                             <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B073X364GG&asins=B073X364GG&linkId=10292ee0a1be604dca26fde72b9d3231&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07HJ8WKM1&asins=B07HJ8WKM1&linkId=9da41524e28a4fa17e1efa1af8d3fd93&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07T86HBG1&asins=B07T86HBG1&linkId=f75f0ae463727569b90a7bb3ca5c7bf8&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01LZ0H8X4&asins=B01LZ0H8X4&linkId=192548cf9648f6a31f65c745d6cf0a0e&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
 
                     </div>
                 </div>
@@ -465,9 +502,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
 
-                   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                            scrolling="no" frameborder="0"
-                            src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B083FRKMDG&asins=B083FRKMDG&linkId=7d988fe2dc063fe13eef8240f804850d&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
@@ -479,9 +514,7 @@
                 </div>
                 <div class="swiper-slide">
 
-                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no"
-                        frameborder="0"
-                        src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
+                    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07Z2Z46ZF&asins=B07Z2Z46ZF&linkId=e24a84627d3dc71685690e60f32f36af&show_border=true&link_opens_in_new_window=true"></iframe>
                 </div>
                 <div class="swiper-slide">
 
