--- a/sports.html
+++ b/sports.html
@@ -34,7 +34,36 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <!-- end swiper js -->
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174464663-1');
+</script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 </head>
 <!--/head-->
 
