--- a/makeup_men_fragrances.html
+++ b/makeup_men_fragrances.html
@@ -34,7 +34,27 @@
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
 	<link rel="stylesheet" href="./css/swiper-bundle.min.css">
 	<!-- end swiper js -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 </head>
 <!--/head-->
 
@@ -415,6 +435,7 @@
 
 						</div>
 						<div class="row">
+						    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 							<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B018QGPOUA&asins=B018QGPOUA&linkId=d5ccab759a4c8842c31148515c2f645b&show_border=true&link_opens_in_new_window=true"></iframe>
 							</div>
 							<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
