--- a/men_jeans.html
+++ b/men_jeans.html
@@ -34,6 +34,27 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <!-- end swiper js -->
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 
 </head>
 <!--/head-->
@@ -374,13 +395,8 @@
                             </div>
 
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07XC1R5BS&asins=B07XC1R5BS&linkId=0d77e35221f050d1d678d19c148ec74d&show_border=true&link_opens_in_new_window=true"></iframe>
                                 
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
-                                    scrolling="no" frameborder="0"
-                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&
-                                            MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&
-                                            language=en_IN&marketplace=amazon&region=IN&placement=B07KB1Z6S4&asins=B07KB1Z6S4&
-                                            linkId=4ff0471d49eaa128dfa7ac0cea9aa0e7&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
@@ -397,7 +413,7 @@
                             <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B06Y6RMYKM&asins=B06Y6RMYKM&linkId=8ec59ca0c9be8168125b37546773093c&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
-                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07CWT2HXF&asins=B07CWT2HXF&linkId=04328f659e49dbfeaff0d2c5cb285353&show_border=true&link_opens_in_new_window=true"></iframe>
+                                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07XC1R5BS&asins=B07XC1R5BS&linkId=0d77e35221f050d1d678d19c148ec74d&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
