--- a/sports_men.html
+++ b/sports_men.html
@@ -34,7 +34,36 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <!-- end swiper js -->
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174464663-1');
+</script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 </head>
 <!--/head-->
 
@@ -52,35 +81,94 @@
 
 
     <!-- Start header section -->
-    <div class="aa-header-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 left">
-                    <div class="aa-header-top-area">
-                        <!-- logo  -->
-                        <div class="aa-logo">
-                            <!-- Text based logo -->
-                            <a href="index.html">
-                                <img src="./assets/logo-removebg-preview.png" alt="logo" class="img-logo">
-                                <p><strong>Hunt-Online</strong> <span>India Strikes Back</span></p>
-                            </a>
+    <header id="aa-header">
+
+        <div class="aa-header-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 left">
+                        <div class="aa-header-top-area">
+                            <!-- logo  -->
+                            <div class="aa-logo">
+                                <!-- Text based logo -->
+                                <a href="index.html">
+                                    <img src="./assets/logo-removebg-preview.png" alt="logo" class="img-logo">
+                                    <p><strong>Hunt-Online</strong> <span>India Strikes Back</span></p>
+                                </a>
 
 
-                            <!-- img based logo -->
-                            <!-- <a href="index.html"><img src="img/logo.jpg" alt="logo img"></a> -->
+                                <!-- img based logo -->
+                                <!-- <a href="index.html"><img src="img/logo.jpg" alt="logo img"></a> -->
+                            </div>
                         </div>
+                        <!-- / logo  -->
+
                     </div>
-                    <!-- / logo  -->
+                    <div class="col-md-6 right">
+                        <a href="./TermsAndConditions/terms.html" target="_blank"><img src="./assets/home/Cashback.jpeg"
+                                alt="cashback" class="cashback"></a>
 
-                </div>
-                <div class="col-md-6 right">
-                    <a href="./TermsAndConditions/terms.html" target="_blank"><img src="./assets/home/Cashback.jpeg"
-                            alt="cashback" class="cashback"></a>
-
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <!-- / header top -->
+
+        <!-- start header bottom  -->
+        <div class="aa-header-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div id="menu">
+                            <div class="container">
+                                <div class="menu-area">
+                                    <!-- Navbar -->
+                                    <div class="navbar navbar-default" role="navigation">
+                                        <div class="navbar-header">
+                                            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                                data-target=".navbar-collapse">
+                                                <span class="sr-only">Toggle navigation</span>
+                                                <span class="icon-bar"></span>
+                                                <span class="icon-bar"></span>
+                                                <span class="icon-bar"></span>
+                                            </button>
+                                        </div>
+                                        <div class="navbar-collapse collapse">
+                                            <!-- Left nav -->
+                                            <ul class="nav navbar-nav">
+                                                <li><a href="index.html" target="_blank">Home</a></li>
+                                                <li><a href="men.html" target="_blank">Men </a>
+                                                </li>
+                                                <li><a href="women.html" target="_blank">Women</a>
+
+                                                </li>
+                                                <li><a href="kids.html" target="_blank">Kids</a>
+
+                                                </li>
+                                                <li><a href="sports.html" class="active">Sports</a></li>
+                                                <li><a href="technology.html" target="_blank">Technology</a>
+                                                </li>
+                                                <li><a href="homedecor.html" target="_blank">Home Decor</a></li>
+                                                <li><a href="lifestyle.html" target="_blank">Lifestyle</a></li>
+                                                <li><a href="pet_products.html" target="_blank">Pet Products</a></li>
+                                                <li><a href="makeup.html" target="_blank">Makeup</a></li>
+
+                                                <li><a href="./ContactFrom/contact.html" target="_blank">Contact Us</a>
+                                                </li>
+
+                                            </ul>
+                                        </div>
+                                        <!--/.nav-collapse -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- / header bottom  -->
+    </header>
     <!-- / header section -->
     <!-- search bar -->
     <section>
@@ -336,6 +424,40 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
                                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07BDXY68C&asins=B07BDXY68C&linkId=dc6fe1a95b8b2452dc6cf8fd1e565314&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
+                          <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                             <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07YDZSHXB&asins=B07YDZSHXB&linkId=6c80688670ac5adbb0c23480bc629d0d&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B074FTBWQF&asins=B074FTBWQF&linkId=ec189d20baf829059c16ddee67f5bd5a&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                             <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B072N829GV&asins=B072N829GV&linkId=76be096e03626484e76a7fecb2cacf7d&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B073ZJCK77&asins=B073ZJCK77&linkId=e938235d47b828d67d81077187dbdff0&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
+                              <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                              <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KPJHHSV&asins=B07KPJHHSV&linkId=290f85f3e6fbb33d05bd93a199eb9ea3&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07KPJHHSV&asins=B07KPJHHSV&linkId=290f85f3e6fbb33d05bd93a199eb9ea3&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                             <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07QM68NLD&asins=B07QM68NLD&linkId=c55b3bfb02395d47d2071d87f53bfeee&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                               <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B071XCQ3NP&asins=B071XCQ3NP&linkId=1d3999c87bacc6dfb216e4f3ab5f5ab9&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
 
 
