--- a/tech_headset.html
+++ b/tech_headset.html
@@ -34,7 +34,27 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <!-- end swiper js -->
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174464663-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-174464663-1');
+</script>
+<!-- Howuku Tracking Code -->
+<script>
+  (function(d){
+    var key = "Dw4xzAaNEd5mjdVy9G2p7g",
+        e = d.createElement("script");
+    e.type = "text/javascript";
+    e.async = true;
+    e.src = "https://cdn.howuku.com/js/howu.js";
+    e.setAttribute("key", key);
+    d.getElementsByTagName("head")[0].appendChild(e);
+  })(document);
+</script>
 </head>
 <!--/head-->
 
@@ -85,26 +105,7 @@
         </div>
         <!-- / header top -->
         <!-- search bar -->
-        <section>
-            <div class="col-md-12">
-                <script type="text/javascript">
-                    amzn_assoc_ad_type = "responsive_search_widget";
-                    amzn_assoc_tracking_id = "huntonline365-21";
-                    amzn_assoc_marketplace = "amazon";
-                    amzn_assoc_region = "IN";
-                    amzn_assoc_placement = "";
-                    amzn_assoc_search_type = "search_box";
-                    amzn_assoc_width = "auto";
-                    amzn_assoc_height = "auto";
-                    amzn_assoc_default_search_category = "";
-                    amzn_assoc_theme = "light";
-                    amzn_assoc_bg_color = "FFFFFF";
-                </script>
-                <script
-                    src="//z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN">
-                </script>
-            </div>
-        </section>
+        
 
         <!-- search bar end -->
 
@@ -162,6 +163,26 @@
         </div>
         <!-- / header bottom  -->
     </header>
+    <section>
+            <div class="col-md-12">
+                <script type="text/javascript">
+                    amzn_assoc_ad_type = "responsive_search_widget";
+                    amzn_assoc_tracking_id = "huntonline365-21";
+                    amzn_assoc_marketplace = "amazon";
+                    amzn_assoc_region = "IN";
+                    amzn_assoc_placement = "";
+                    amzn_assoc_search_type = "search_box";
+                    amzn_assoc_width = "auto";
+                    amzn_assoc_height = "auto";
+                    amzn_assoc_default_search_category = "";
+                    amzn_assoc_theme = "light";
+                    amzn_assoc_bg_color = "FFFFFF";
+                </script>
+                <script
+                    src="//z-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1&Marketplace=IN">
+                </script>
+            </div>
+        </section>
     <!-- / header section -->
 
     <section>
