--- a/lifestyle_daily.html
+++ b/lifestyle_daily.html
@@ -150,7 +150,7 @@
                                                         Decor</a></li>
                                                 <li><a href="lifestyle.html" class="active"
                                                         title="lifestyle">Lifestyle</a></li>
-                                                <li><a href="stationery.html" target="_blank">Stationery</a></li>
+                                                <li><a href="stationery.html" target="_blank" title="stationery">Stationery</a></li>
                                                 <li><a href="makeup.html" target="_blank" title="makeup">Makeup</a></li>
 
                                                 <li><a href="#contact" title="contact_us">Contact Us</a>
