--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                                         Decor</a></li>
                                                 <li><a href="lifestyle.html" target="_blank"
                                                         title="lifestyle">Lifestyle</a></li>
-                                                <li><a href="stationery.html" target="_blank">Stationery</a></li>
+                                                <li><a href="stationery.html" target="_blank" title="stationery">Stationery</a></li>
                                                 <li><a href="makeup.html" target="_blank" title="makeup">Makeup</a></li>
 
                                                 <li><a href="#contact" title="contact_us">Contact Us</a>
